--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body h4{
 }
 body{
     text-align: center;
-    background-color: lightcoral;
+    background-color: #f08080;
     border: inset;
     border-color: yellow;
     color: purple;
